Fixed error in 2A

--- a/ch2/2a-span-and-linear-independence.tex
+++ b/ch2/2a-span-and-linear-independence.tex
@@ -506,7 +506,7 @@ Hence $b_1=\cdots=b_m=0$, so $v_1,\dots,v_m$ is linearly independent.
 \end{solution}
 
 \begin{exercise}{}
-Explain why no list of four polynomials spans $\mathcal P_4(\mathbb F)$.
+Explain why no list of four polynomials spans $\mathcal{P}_4(\mathbb{F})$.
 \end{exercise}
 
 \begin{solution}
@@ -514,17 +514,17 @@ The list
 \[
 1,\; x,\; x^2,\; x^3,\; x^4
 \]
-spans $\mathcal P_4(\mathbb F)$, so $\mathcal P_4(\mathbb F)$ has dimension $5$.
+spans $\mathcal P_4(\mathbb F)$, so $\mathcal{P}_4(\mathbb{F})$ has dimension $5$.
 
-Because every spanning list of a finite-dimensional vector space must contain at least as many vectors as the dimension of the space, no list of four polynomials can span $\mathcal P_4(\mathbb F)$.
+Because every spanning list of a finite-dimensional vector space must contain at least as many vectors as the dimension of the space, no list of four polynomials can span $\mathcal{P}_4(\mathbb{F})$.
 \end{solution}
 
 \begin{exercise}{}
-Explain why there does not exist a list of six polynomials that is linearly independent in $\mathcal P_4(\mathbb F)$.
+Explain why there does not exist a list of six polynomials that is linearly independent in $\mathcal{P}_4(\mathbb{F})$.
 \end{exercise}
 
 \begin{solution}
-Every polynomial in $\mathcal P_4(\mathbb F)$ has the form
+Every polynomial in $\mathcal{P}_4(\mathbb{F})$ has the form
 \[
 a_0 + a_1x + a_2x^2 + a_3x^3 + a_4x^4,
 \]
@@ -532,9 +532,9 @@ so the list
 \[
 1,\; x,\; x^2,\; x^3,\; x^4
 \]
-spans $\mathcal P_4(\mathbb F)$. Hence $\mathcal P_4(\mathbb F)$ has dimension $5$.
+spans $\mathcal{P}_4(\mathbb{F})$. Hence $\mathcal{P}_4(\mathbb{F})$ has dimension $5$.
 
-Because every linearly independent list in a finite-dimensional vector space has length at most the dimension of the space, no list of six polynomials can be linearly independent in $\mathcal P_4(\mathbb F)$.
+Because every linearly independent list in a finite-dimensional vector space has length at most the dimension of the space, no list of six polynomials can be linearly independent in $\mathcal{P}_4(\mathbb{F})$.
 \end{solution}
 
 \begin{exercise}{}
