Fixed title in 2B

--- a/ch2/2b-bases.tex
+++ b/ch2/2b-bases.tex
@@ -75,7 +75,7 @@
 % =====================================================
 % Metadata
 % =====================================================
-\title{Linear Algebra Done Right \\ \large Section 2A: Span and Linear Independence}
+\title{Linear Algebra Done Right \\ \large Section 2B: Bases}
 \author{Naman Tyagi}
 \date{}
 
